--- a/styles.css
+++ b/styles.css
@@ -14,3 +14,54 @@ body{
     justify-content: center;
     padding: 20px;
 }
+
+.container{
+    background-color: white;
+    border-radius: 1rem;
+    padding: 2rem;
+    width: 100%;
+    max-width: 800px;
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
+}
+
+h1{
+    text-align: center;
+    color: #333;
+    margin-bottom: 1.5rem;
+    position: relative;
+    padding-bottom: 0.5rem;
+}
+
+h1::after{
+    content: "";
+    position: absolute;
+    bottom: -10px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 40%;
+    height: 3px;
+    background-color: #7F7CAF;
+    border-radius: 2px;
+}
+
+#generate-btn{
+    background: linear-gradient(45deg, #7F7CAF, #9FB4C7);
+    color : white;
+    border: none;
+    padding : 0.5rem 1rem;
+    border-radius: 40px;
+    cursor: pointer;
+    font-weight: 500;
+    margin-bottom: 2rem;
+    font-size: 1rem;
+}
+
+#generate-btn:hover{
+    transform: translateY(-2px);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+#generate-btn:active{
+    transform: translateY(0);
+}
+
