--- a/styles.css
+++ b/styles.css
@@ -65,3 +65,51 @@ h1::after{
     transform: translateY(0);
 }
 
+.palette{
+    display: grid;
+    gap : 1rem;
+    grid-template-columns: repeat(auto-fill, minmax(130px, 1fr));
+
+}
+
+.color-box{
+    border-radius : 10px;
+    overflow: hidden;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    transition: transform 0.3s ease;
+
+}
+.color-box:hover{
+    transform: translateY(-5px);
+}
+
+.color{
+    height: 150px;
+}
+.color-name{
+    background-color: #f0f0f0;
+    padding: 0.5rem;
+    display: flex;
+    text-align: center;
+    align-items: center;
+    justify-content: space-between;
+    font-size: .8rem;
+}
+
+.color-hex{
+    font-weight: 500;
+    letter-spacing: 0.4px;
+}
+
+.copy-img{
+   cursor: pointer;
+   height: 20px;
+   width: 20px;
+}
+.copy-img:hover{
+    transform: scale(1.1);
+}
+
+
+
+
